# body_analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prometheus.yml  pyproject.toml  response.json  setup.py  test_api.py
src/body_analyzer/: analisis_completo.py  calculo_grasa.py  calculos.py  constantes.py  endpoints.py  interpretaciones.py  main.py  model.py
src/tests/: test_calculos.py
tests/: test_analisis_completo.py  test_calculos.py  test_interpretaciones.py  test_main.py  test_model.py
