# Build, define las herremientas necesarias para gestionar,
# usamos setuptools para la construccion y el empaquetado del proyecto.

[build-system]
requires = ["setuptools~=72.1.0", "setuptools-scm~=7.1.0", "wheel~=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "body_analyzer"
version = "0.1.0"
dynamic = ["readme"]
authors = [
    { name = "©2024 Pablo Techera", email = "ptecherasosa@icloud.com" },
]
description = "Development of a REST API for body composition analysis."
requires-python = ">=3.11"
keywords = ["body composition", "health", "calculator", "REST API", "Python", "body analysis"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "blinker~=1.8.2",
    "certifi~=2024.8.30",
    "charset-normalizer~=3.4.0",
    "click~=8.1.7",
    "Flask~=3.0.3",
    "idna~=3.10",
    "iniconfig~=2.0.0",
    "itsdangerous~=2.2.0",
    "Jinja2~=3.1.4",
    "MarkupSafe~=3.0.1",
    "packaging~=24.1",
    "pip~=24.3.1",
    "pluggy~=1.5.0",
    "pytest~=8.3.3",
    "requests~=2.32.3",
    "typing_extensions~=4.12.2",
    "urllib3~=2.2.3",
    "Werkzeug~=3.0.4"

]

# tool define de donde se va a obtener la descripción del proyecto en este caso del fichero README.md
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

# project.optional son dependencias opcionales y utilidades adicionales.

[project.optional-dependencies]
tests = [
    "time-machine==2.15.0",
    "coverage==7.6.1"
]
extended = [
    "time-machine==2.14.1"
]

# tool.setuptools define donde están los archivos de código fuente y necesario para que setuptools sepa qué paquetes debe incluir.

[tool.setuptools.packages.find]
where = ["src"]
include = ["body_analyzer"]

[tool.pytest.ini.options]
addopts = "-v"
